--- a/server/tomcat/web/css/auth-login.css
+++ b/server/tomcat/web/css/auth-login.css
@@ -1,4 +1,4 @@
-.navbar-container {
+.navlogout-container {
   width: 100%;
   display: flex;
   position: relative;
@@ -6,29 +6,26 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-
-.navbar-container1 {
+.navlogout-container1 {
   width: 100%;
   border: 2px dashed rgba(120, 120, 120, 0.4);
-  height: 10vh;
+  height: 11vh;
   display: flex;
   opacity: 1;
-  align-items: flex-start;
-  background-color: var(--dl-color-theme-secondary1);
+  align-items: stretch;
+  justify-content: space-between;
 }
-
-.navbar-container2 {
+.navlogout-container2 {
   width: 100%;
   display: flex;
   position: relative;
   justify-content: center;
   background-color: var(--dl-color-theme-secondary1);
 }
-
-.navbar-navbar-interactive {
+.navlogout-navbar-interactive {
   top: 0;
   width: 100%;
-  height: 10vh;
+  height: 11vh;
   display: flex;
   z-index: 1;
   position: fixed;
@@ -45,23 +42,25 @@
   justify-content: space-between;
   background-color: var(--dl-color-theme-secondary1);
 }
-
-.navbar-pasted-image {
-  width: 6vw;
-  height: 9vh;
+.navlogout-link {
+  display: contents;
 }
-
-.navbar-desktop-menu {
+.navlogout-pasted-image {
+  width: 6vw;
+  height: auto;
+  min-width: 80px;
+  text-decoration: none;
+}
+.navlogout-desktop-menu {
   flex: 1;
   width: 80vw;
   display: flex;
   position: relative;
   justify-content: space-between;
 }
-
-.navbar-links {
+.navlogout-links {
   gap: var(--dl-space-space-twounits);
-  width: 70vw;
+  width: 85vw;
   height: 10vh;
   display: flex;
   align-items: center;
@@ -69,8 +68,7 @@
   flex-direction: row;
   justify-content: flex-start;
 }
-
-.navbar-container3 {
+.navlogout-container3 {
   width: 30vw;
   height: 100%;
   display: flex;
@@ -78,139 +76,77 @@
   flex-direction: row;
   justify-content: center;
 }
-
-.navbar-textinput {
+.navlogout-textinput {
   width: 100%;
   height: 3vh;
   padding-left: var(--dl-space-space-oneandhalfunits);
   border-radius: 20px;
 }
-
-.navbar-search {
+.navlogout-search {
   width: 5vw;
   height: 3vh;
   display: flex;
   margin-left: var(--dl-space-space-halfunit);
-  border-color: var(--dl-color-theme-primary1);
+  border-color: var(--dl-color-theme-neutral-dark);
+  border-width: 2px;
   padding-left: var(--dl-space-space-oneandhalfunits);
   flex-direction: row;
 }
-
-.navbar-text {
+.navlogout-text {
   font-size: 0.9rem;
   font-weight: 400;
 }
-
-.navbar-container4 {
+.navlogout-container4 {
   width: 35vw;
   height: 2vh;
   display: flex;
   align-items: flex-start;
+  margin-left: 15vw;
   flex-direction: row;
   justify-content: space-between;
 }
-
-.navbar-home {
+.navlogout-home {
   font-size: 0.9rem;
   text-decoration: none;
 }
-
-.navbar-contact {
+.navlogout-contact {
   font-size: 0.9rem;
 }
-
-.navbar-whoweare {
+.navlogout-whoweare {
   font-size: 0.9rem;
 }
-
-.navbar-manager-order {
-  font-size: 0.9rem;
-}
-
-.navbar-buttons {
-  width: 17vw;
-  height: 10vh;
-  display: flex;
-  align-items: center;
-  margin-left: 0px;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.navbar-icon {
-  fill: #101010;
-  width: 3vw;
-  height: 3vh;
-  margin-top: var(--dl-space-space-halfunit);
-  margin-left: var(--dl-space-space-halfunit);
-  margin-bottom: var(--dl-space-space-halfunit);
-}
-
-.navbar-icon02 {
-  fill: #161515;
-  width: 3vw;
-  height: 3vh;
-  margin-top: var(--dl-space-space-halfunit);
-  margin-bottom: var(--dl-space-space-halfunit);
-}
-
-.navbar-account {
-  width: 8vw;
-  height: 4vh;
-  display: flex;
-  position: relative;
-  border-color: var(--dl-color-theme-primary1);
-  padding-left: var(--dl-space-space-halfunit);
-  padding-right: var(--dl-space-space-halfunit);
-  flex-direction: row;
-  text-decoration: none;
-}
-
-.navbar-icon04 {
-  width: 3vw;
-  height: 3vh;
-  margin-left: var(--dl-space-space-halfunit);
-}
-
-.navbar-burger-menu {
+.navlogout-burger-menu {
   display: none;
 }
-
-.navbar-icon06 {
+.navlogout-icon {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-
-.navbar-mobile-menu {
+.navlogout-mobile-menu {
   top: 0px;
   left: 0px;
   width: 100%;
   height: 100vh;
-  display: flex;
+  display: none;
   padding: var(--dl-space-space-twounits);
   z-index: 100;
   position: absolute;
-  transform: translateX(100%);
-  transition: 0.5s;
   flex-direction: column;
   background-color: var(--dl-color-theme-neutral-light);
 }
-
-.navbar-nav {
+.navlogout-nav {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-
-.navbar-top {
+.navlogout-top {
   width: 100%;
   display: flex;
   align-items: center;
   margin-bottom: var(--dl-space-space-threeunits);
   justify-content: space-between;
 }
-
-.navbar-container5 {
+.navlogout-container5 {
   flex: 0 0 auto;
   width: auto;
   height: auto;
@@ -218,19 +154,16 @@
   align-items: space-between;
   flex-direction: column;
 }
-
-.navbar-close-menu {
+.navlogout-close-menu {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
-.navbar-icon08 {
+.navlogout-icon2 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-
-.navbar-links1 {
+.navlogout-links1 {
   gap: var(--dl-space-space-unit);
   flex: 0 0 auto;
   display: flex;
@@ -238,21 +171,18 @@
   align-items: flex-start;
   flex-direction: column;
 }
-
-.navbar-container6 {
+.navlogout-container6 {
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: center;
 }
-
-.navbar-textinput1 {
+.navlogout-textinput1 {
   width: 291px;
   padding-left: var(--dl-space-space-twounits);
   border-radius: 20px;
 }
-
-.navbar-search1 {
+.navlogout-search1 {
   width: 61px;
   height: 33px;
   display: flex;
@@ -260,152 +190,117 @@
   padding-left: var(--dl-space-space-oneandhalfunits);
   flex-direction: row;
 }
-
-.navbar-text3 {
+.navlogout-text3 {
   font-weight: 400;
 }
 
-.navbar-buttons1 {
-  gap: var(--dl-space-space-twounits);
-  border: 2px dashed rgba(120, 120, 120, 0.4);
-  display: flex;
-  margin-top: var(--dl-space-space-twounits);
-  align-items: center;
-}
 
-.navbar-root-class-name20 {
-  align-self: flex-start;
-}
+
+
 
 @media(max-width: 1200px) {
-  .navbar-pasted-image1 {
+  .navlogout-textinput {
+    font-size: 0.9rem;
+  }
+  .navlogout-pasted-image1 {
     width: 137px;
     height: 119px;
   }
 }
-
+@media(max-width: 991px) {
+  .navlogout-textinput {
+    font-size: 0.7rem;
+  }
+  .navlogout-text {
+    font-size: 0.7rem;
+  }
+  .navlogout-container4 {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .navlogout-home {
+    font-size: 0.7rem;
+  }
+  .navlogout-contact {
+    font-size: 0.7rem;
+  }
+  .navlogout-whoweare {
+    font-size: 0.7rem;
+  }
+  .navlogout-mobile-menu {
+    width: 100%;
+    height: 100%;
+    align-items: flex-start;
+  }
+  .navlogout-nav {
+    width: 100%;
+    height: auto;
+    align-self: center;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background-color: var(--dl-color-theme-secondary1);
+  }
+  .navlogout-top {
+    margin-bottom: var(--dl-space-space-unit);
+  }
+  .navlogout-links1 {
+    width: auto;
+    height: auto;
+  }
+}
 @media(max-width: 767px) {
-  .navbar-navbar-interactive {
-    padding-left: var(--dl-space-space-twounits);
-    padding-right: var(--dl-space-space-twounits);
+  .navlogout-container1 {
+    align-self: center;
   }
-
-  .navbar-desktop-menu {
-    display: none;
+  .navlogout-burger-menu {
+    align-items: center;
+    justify-content: center;
   }
-
-  .navbar-burger-menu {
-    display: flex;
+  .navlogout-mobile-menu {
+    height: auto;
+  }
+  .navlogout-nav {
+    align-self: center;
     align-items: center;
     justify-content: center;
   }
 }
-
 @media(max-width: 479px) {
-  .navbar-navbar-interactive {
-    padding: var(--dl-space-space-unit);
-    padding-right: 16px;
+  .navlogout-desktop-menu {
+    display: none;
   }
-
-  .navbar-mobile-menu {
+  .navlogout-burger-menu {
+    display: flex;
+  }
+  .navlogout-mobile-menu {
     padding: var(--dl-space-space-unit);
   }
-
-  .navbar-pasted-image1 {
+  .navlogout-pasted-image1 {
     width: 108px;
     height: 78px;
   }
-
-  .navbar-textinput1 {
+  .navlogout-textinput1 {
     width: 257px;
     height: 37px;
   }
 }
 
-.menu-function-container {
-  width: 100%;
-  height: 5vh;
-  display: flex;
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  background-image: linear-gradient(90deg, rgb(192, 36, 37) 0.00%, rgba(42, 42, 39, 0.45) 100.00%);
-}
-
-.menu-function-manager {
-  width: 70vw;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.menu-function-mgt-ware-house {
-  fill: var(--dl-color-theme-secondary1);
-  color: var(--dl-color-theme-secondary1);
-  font-size: 0.9rem;
-  font-style: normal;
-  font-family: "Noto Sans";
-  font-weight: 600;
-}
-
-.menu-function-mgt-customer {
-  fill: var(--dl-color-theme-secondary1);
-  color: var(--dl-color-theme-secondary1);
-  font-size: 0.9rem;
-  font-style: normal;
-  font-family: "Noto Sans";
-  font-weight: 600;
-  line-height: 1.15;
-  text-transform: none;
-  text-decoration: none;
-}
-
-.menu-function-mgt-feebcack {
-  fill: var(--dl-color-theme-secondary1);
-  color: var(--dl-color-theme-secondary1);
-  font-size: 0.9rem;
-  font-style: normal;
-  font-family: "Noto Sans";
-  font-weight: 600;
-  line-height: 1.15;
-  text-transform: none;
-  text-decoration: none;
-}
-
-.menu-function-mgt-staff {
-  fill: var(--dl-color-theme-secondary1);
-  color: var(--dl-color-theme-secondary1);
-  font-size: 0.9rem;
-  font-style: normal;
-  font-family: "Noto Sans";
-  font-weight: 600;
-  line-height: 1.15;
-  text-transform: none;
-  text-decoration: none;
-}
-
-.menu-function-mgt-report {
-  font-size: 0.9rem;
-}
-
-.resetpass-container {
+.sign-in-container {
   width: 40vw;
-  height: 50vh;
+  height: 65vh;
   display: flex;
   position: relative;
   align-items: center;
   flex-direction: column;
   justify-content: center;
 }
-
-.resetpass-max-width {
+.sign-in-max-width {
   gap: var(--dl-space-space-twounits);
-  width: 40vw;
-  height: 55vh;
+  width: 46vw;
+  height: 80vh;
   display: flex;
   z-index: 100;
-  box-shadow: 5px 5px 5px 0px #060606;
+  box-shadow: 5px 5px 5px 0px #131111;
   align-items: center;
   border-color: var(--dl-color-theme-neutral-dark);
   border-width: 2px;
@@ -414,68 +309,124 @@
   justify-content: center;
   background-color: var(--dl-color-theme-neutral-light);
 }
-
-.resetpass-form {
+.sign-in-form {
   gap: var(--dl-space-space-oneandhalfunits);
-  width: 100%;
+  width: 40vw;
+  height: 70vh;
   display: flex;
   align-self: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
 }
-
-.resetpass-text {
+.sign-in-text {
+  width: 30vw;
+  height: 8vh;
   font-size: 2.5rem;
   align-self: center;
   text-align: center;
-  ;
+  margin-bottom: var(--dl-space-space-unit);
+  text-decoration: underline;
 }
-
-.resetpass-form1 {
-  gap: var(--dl-space-space-unit);
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-}
-
-.resetpass-email {
+.sign-in-email {
   gap: var(--dl-space-space-halfunit);
-  width: 100%;
+  width: 35vw;
   display: flex;
   align-items: flex-start;
   flex-shrink: 0;
   flex-direction: column;
 }
-
-.resetpass-textinput {
+.sign-in-input {
   width: 100%;
   border-color: var(--dl-color-theme-primary1);
   background-color: transparent;
 }
-
-.resetpass-button {
+.sign-in-password {
+  gap: var(--dl-space-space-halfunit);
+  width: 35vw;
+  display: flex;
+  position: relative;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.sign-in-textinput {
   width: 100%;
-  align-self: center;
-  background-color: #7e151f;
+  border-color: var(--dl-color-theme-primary1);
+  background-color: transparent;
 }
-
-.resetpass-text4 {
-  text-align: center;
-}
-
-.resetpass-container1 {
-  gap: var(--dl-space-space-unit);
+.sign-in-container1 {
   width: 100%;
   display: flex;
-  max-width: 100%;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.sign-in-container2 {
+  width: 100%;
+  height: 20px;
+  display: flex;
+  position: relative;
   align-items: center;
   flex-direction: column;
   justify-content: center;
 }
-
-.resetpass-divider {
+.sign-in-checkbox {
+  left: 0px;
+  bottom: 0px;
+  position: absolute;
+  align-self: flex-start;
+}
+.sign-in-text3 {
+  color: rgb(230, 7, 7);
+  right: 0px;
+  bottom: 0px;
+  position: absolute;
+  align-self: flex-end;
+}
+.sign-in-text4 {
+  left: 33px;
+  bottom: -4px;
+  position: absolute;
+  align-self: flex-end;
+  text-decoration:  underline none;
+}
+.sign-in-button {
+  width: 35vw;
+  align-self: center;
+}
+.sign-in-text5 {
+  text-align: center;
+}
+.sign-in-container3 {
+  gap: var(--dl-space-space-halfunit);
+  width: 35vw;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.sign-in-button1 {
+  width: 100%;
+  align-self: center;
+  background-color: #7e151f;
+}
+.sign-in-icon {
+  fill: #ecece0;
+  width: 24px;
+  height: 24px;
+}
+.sign-in-text6 {
+  text-align: center;
+}
+.sign-in-container4 {
+  gap: var(--dl-space-space-unit);
+  width: 35vw;
+  display: flex;
+  max-width: 40vw;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.sign-in-divider {
   gap: var(--dl-space-space-oneandhalfunits);
   width: 100%;
   height: auto;
@@ -484,8 +435,7 @@
   flex-shrink: 0;
   justify-content: center;
 }
-
-.resetpass-divider1 {
+.sign-in-divider1 {
   flex: 1;
   width: var(--dl-size-size-medium);
   height: 1px;
@@ -494,8 +444,7 @@
   flex-direction: column;
   background-color: var(--dl-color-theme-primary1);
 }
-
-.resetpass-divider2 {
+.sign-in-divider2 {
   flex: 1;
   width: var(--dl-size-size-medium);
   height: 1px;
@@ -504,56 +453,31 @@
   flex-direction: column;
   background-color: var(--dl-color-theme-primary1);
 }
-
-.resetpass-button1 {
+.sign-in-button2 {
   width: 100%;
   align-self: center;
   text-decoration: none;
 }
-
-.resetpass-text6 {
+.sign-in-text8 {
   text-align: center;
 }
 
-.resetpass-container2 {
-  gap: var(--dl-space-space-halfunit);
-  width: 100%;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-
-.resetpass-button2 {
-  width: 100%;
+.sign-in-root-class-name1 {
   align-self: center;
 }
-
-.resetpass-icon {
-  fill: #ecece0;
-  width: 24px;
-  height: 24px;
-}
-
-.resetpass-text7 {
-  text-align: center;
-}
-
 @media(max-width: 479px) {
-  .resetpass-button {
+  .sign-in-button {
     width: 100%;
   }
-
-  .resetpass-button1 {
+  .sign-in-button1 {
     width: 100%;
   }
-
-  .resetpass-button2 {
+  .sign-in-button2 {
     width: 100%;
   }
 }
 
-.reset-password-container {
+.auth-login-container {
   width: 100%;
   display: flex;
   min-height: 100vh;
@@ -561,22 +485,21 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-
-.reset-password-header {
+.auth-login-header {
   width: 100%;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   justify-content: flex-start;
 }
-
-.reset-password-container1 {
+.auth-login-body {
   width: 100%;
-  height: 85vh;
+  height: 100vh;
   display: flex;
+  align-self: center;
   align-items: center;
   background-size: cover;
   justify-content: center;
-  background-image: url('https://images.unsplash.com/photo-1615290642832-0e0995702507?ixid=M3w5MTMyMXwwfDF8c2VhcmNofDEyfHxjb21wfGVufDB8fHx8MTcxNzM0NTc2NHww&ixlib=rb-4.0.3&w=1500');
+  background-image: url("./image/authBackground.jpg");
   background-position: center;
 }
