--- a/server/tomcat/web/css/auth-register-google.css
+++ b/server/tomcat/web/css/auth-register-google.css
@@ -1,4 +1,4 @@
-.navbar-container {
+.navlogout-container {
   width: 100%;
   display: flex;
   position: relative;
@@ -6,26 +6,23 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-
-.navbar-container1 {
+.navlogout-container1 {
   width: 100%;
   border: 2px dashed rgba(120, 120, 120, 0.4);
   height: 11vh;
   display: flex;
   opacity: 1;
-  align-items: flex-start;
-  background-color: var(--dl-color-theme-secondary1);
+  align-items: stretch;
+  justify-content: space-between;
 }
-
-.navbar-container2 {
+.navlogout-container2 {
   width: 100%;
   display: flex;
   position: relative;
   justify-content: center;
   background-color: var(--dl-color-theme-secondary1);
 }
-
-.navbar-navbar-interactive {
+.navlogout-navbar-interactive {
   top: 0;
   width: 100%;
   height: 11vh;
@@ -45,24 +42,25 @@
   justify-content: space-between;
   background-color: var(--dl-color-theme-secondary1);
 }
-
-.navbar-pasted-image {
+.navlogout-link {
+  display: contents;
+}
+.navlogout-pasted-image {
   width: 6vw;
   height: auto;
   min-width: 80px;
+  text-decoration: none;
 }
-
-.navbar-desktop-menu {
+.navlogout-desktop-menu {
   flex: 1;
   width: 80vw;
   display: flex;
   position: relative;
   justify-content: space-between;
 }
-
-.navbar-links {
+.navlogout-links {
   gap: var(--dl-space-space-twounits);
-  width: 70vw;
+  width: 85vw;
   height: 10vh;
   display: flex;
   align-items: center;
@@ -70,8 +68,7 @@
   flex-direction: row;
   justify-content: flex-start;
 }
-
-.navbar-container3 {
+.navlogout-container3 {
   width: 30vw;
   height: 100%;
   display: flex;
@@ -79,15 +76,13 @@
   flex-direction: row;
   justify-content: center;
 }
-
-.navbar-textinput {
+.navlogout-textinput {
   width: 100%;
   height: 3vh;
   padding-left: var(--dl-space-space-oneandhalfunits);
   border-radius: 20px;
 }
-
-.navbar-search {
+.navlogout-search {
   width: 5vw;
   height: 3vh;
   display: flex;
@@ -97,123 +92,61 @@
   padding-left: var(--dl-space-space-oneandhalfunits);
   flex-direction: row;
 }
-
-.navbar-text {
+.navlogout-text {
   font-size: 0.9rem;
   font-weight: 400;
 }
-
-.navbar-container4 {
+.navlogout-container4 {
   width: 35vw;
   height: 2vh;
   display: flex;
   align-items: flex-start;
+  margin-left: 15vw;
   flex-direction: row;
   justify-content: space-between;
 }
-
-.navbar-home {
+.navlogout-home {
   font-size: 0.9rem;
   text-decoration: none;
 }
-
-.navbar-contact {
+.navlogout-contact {
   font-size: 0.9rem;
 }
-
-.navbar-whoweare {
+.navlogout-whoweare {
   font-size: 0.9rem;
 }
-
-.navbar-manager-order {
-  font-size: 0.9rem;
-}
-
-.navbar-buttons {
-  width: 17vw;
-  height: 10vh;
-  display: flex;
-  align-items: center;
-  margin-left: 0px;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.navbar-icon {
-  fill: #101010;
-  width: 3vw;
-  height: 3vh;
-  margin-top: var(--dl-space-space-halfunit);
-  margin-left: var(--dl-space-space-halfunit);
-  margin-bottom: var(--dl-space-space-halfunit);
-}
-
-.navbar-icon02 {
-  fill: #161515;
-  width: 3vw;
-  height: 3vh;
-  margin-top: var(--dl-space-space-halfunit);
-  margin-bottom: var(--dl-space-space-halfunit);
-}
-
-.navbar-account {
-  width: 8vw;
-  height: 4vh;
-  display: flex;
-  position: relative;
-  border-color: var(--dl-color-theme-neutral-dark);
-  border-width: 2px;
-  padding-left: var(--dl-space-space-halfunit);
-  padding-right: var(--dl-space-space-halfunit);
-  flex-direction: row;
-  text-decoration: none;
-}
-
-.navbar-icon04 {
-  width: 3vw;
-  height: 3vh;
-  margin-left: var(--dl-space-space-halfunit);
-}
-
-.navbar-burger-menu {
+.navlogout-burger-menu {
   display: none;
 }
-
-.navbar-icon06 {
+.navlogout-icon {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-
-.navbar-mobile-menu {
+.navlogout-mobile-menu {
   top: 0px;
   left: 0px;
   width: 100%;
   height: 100vh;
-  display: flex;
+  display: none;
   padding: var(--dl-space-space-twounits);
   z-index: 100;
   position: absolute;
-  transform: translateX(100%);
-  transition: 0.5s;
   flex-direction: column;
   background-color: var(--dl-color-theme-neutral-light);
 }
-
-.navbar-nav {
+.navlogout-nav {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-
-.navbar-top {
+.navlogout-top {
   width: 100%;
   display: flex;
   align-items: center;
   margin-bottom: var(--dl-space-space-threeunits);
   justify-content: space-between;
 }
-
-.navbar-container5 {
+.navlogout-container5 {
   flex: 0 0 auto;
   width: auto;
   height: auto;
@@ -221,19 +154,16 @@
   align-items: space-between;
   flex-direction: column;
 }
-
-.navbar-close-menu {
+.navlogout-close-menu {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
-.navbar-icon08 {
+.navlogout-icon2 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-
-.navbar-links1 {
+.navlogout-links1 {
   gap: var(--dl-space-space-unit);
   flex: 0 0 auto;
   display: flex;
@@ -241,21 +171,18 @@
   align-items: flex-start;
   flex-direction: column;
 }
-
-.navbar-container6 {
+.navlogout-container6 {
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: center;
 }
-
-.navbar-textinput1 {
+.navlogout-textinput1 {
   width: 291px;
   padding-left: var(--dl-space-space-twounits);
   border-radius: 20px;
 }
-
-.navbar-search1 {
+.navlogout-search1 {
   width: 61px;
   height: 33px;
   display: flex;
@@ -263,138 +190,99 @@
   padding-left: var(--dl-space-space-oneandhalfunits);
   flex-direction: row;
 }
-
-.navbar-text3 {
+.navlogout-text3 {
   font-weight: 400;
 }
 
-.navbar-buttons1 {
-  gap: var(--dl-space-space-twounits);
-  border: 2px dashed rgba(120, 120, 120, 0.4);
-  display: flex;
-  margin-top: var(--dl-space-space-twounits);
-  align-items: center;
-}
+
+
+
 
 @media(max-width: 1200px) {
-  .navbar-desktop-menu {
-    display: none;
+  .navlogout-textinput {
+    font-size: 0.9rem;
   }
-
-  .navbar-burger-menu {
-    display: flex;
-  }
-
-  .navbar-pasted-image1 {
+  .navlogout-pasted-image1 {
     width: 137px;
     height: 119px;
   }
 }
-
-@media(max-width: 767px) {
-  .navbar-navbar-interactive {
-    padding-left: var(--dl-space-space-twounits);
-    padding-right: var(--dl-space-space-twounits);
+@media(max-width: 991px) {
+  .navlogout-textinput {
+    font-size: 0.7rem;
   }
-
-  .navbar-burger-menu {
+  .navlogout-text {
+    font-size: 0.7rem;
+  }
+  .navlogout-container4 {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .navlogout-home {
+    font-size: 0.7rem;
+  }
+  .navlogout-contact {
+    font-size: 0.7rem;
+  }
+  .navlogout-whoweare {
+    font-size: 0.7rem;
+  }
+  .navlogout-mobile-menu {
+    width: 100%;
+    height: 100%;
+    align-items: flex-start;
+  }
+  .navlogout-nav {
+    width: 100%;
+    height: auto;
+    align-self: center;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background-color: var(--dl-color-theme-secondary1);
+  }
+  .navlogout-top {
+    margin-bottom: var(--dl-space-space-unit);
+  }
+  .navlogout-links1 {
+    width: auto;
+    height: auto;
+  }
+}
+@media(max-width: 767px) {
+  .navlogout-container1 {
+    align-self: center;
+  }
+  .navlogout-burger-menu {
+    align-items: center;
+    justify-content: center;
+  }
+  .navlogout-mobile-menu {
+    height: auto;
+  }
+  .navlogout-nav {
+    align-self: center;
     align-items: center;
     justify-content: center;
   }
 }
-
 @media(max-width: 479px) {
-  .navbar-navbar-interactive {
-    padding: var(--dl-space-space-unit);
-    padding-right: 16px;
+  .navlogout-desktop-menu {
+    display: none;
   }
-
-  .navbar-mobile-menu {
+  .navlogout-burger-menu {
+    display: flex;
+  }
+  .navlogout-mobile-menu {
     padding: var(--dl-space-space-unit);
   }
-
-  .navbar-pasted-image1 {
+  .navlogout-pasted-image1 {
     width: 108px;
     height: 78px;
   }
-
-  .navbar-textinput1 {
+  .navlogout-textinput1 {
     width: 257px;
     height: 37px;
   }
-}
-
-.menu-function-container {
-  width: 100%;
-  height: 5vh;
-  display: flex;
-  position: relative;
-  align-items: center;
-  border-color: var(--dl-color-theme-neutral-dark);
-  border-width: 1px;
-  justify-content: center;
-  background-image: linear-gradient(90deg, rgb(192, 36, 37) 0.00%, rgba(42, 42, 39, 0.45) 100.00%);
-}
-
-.menu-function-manager {
-  width: 70vw;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.menu-function-mgt-ware-house {
-  fill: var(--dl-color-theme-secondary1);
-  color: var(--dl-color-theme-secondary1);
-  font-size: 0.9rem;
-  font-style: normal;
-  font-family: "Noto Sans";
-  font-weight: 600;
-}
-
-.menu-function-mgt-customer {
-  fill: var(--dl-color-theme-secondary1);
-  color: var(--dl-color-theme-secondary1);
-  font-size: 0.9rem;
-  font-style: normal;
-  font-family: "Noto Sans";
-  font-weight: 600;
-  line-height: 1.15;
-  text-transform: none;
-  text-decoration: none;
-}
-
-.menu-function-mgt-feebcack {
-  fill: var(--dl-color-theme-secondary1);
-  color: var(--dl-color-theme-secondary1);
-  font-size: 0.9rem;
-  font-style: normal;
-  font-family: "Noto Sans";
-  font-weight: 600;
-  line-height: 1.15;
-  text-transform: none;
-  text-decoration: none;
-}
-
-.menu-function-mgt-staff {
-  fill: var(--dl-color-theme-secondary1);
-  color: var(--dl-color-theme-secondary1);
-  font-size: 0.9rem;
-  font-style: normal;
-  font-family: "Noto Sans";
-  font-weight: 600;
-  line-height: 1.15;
-  text-transform: none;
-  text-decoration: none;
-}
-
-.menu-function-mgt-report {
-  font-size: 0.9rem;
-}
-
-.menu-function-root-class-name38 {
-  align-self: center;
 }
 
 .register-by-gg-container {
@@ -411,7 +299,6 @@
   justify-content: center;
   background-color: var(--dl-color-theme-secondary1);
 }
-
 .register-by-gg-form-root {
   gap: var(--dl-space-space-unit);
   width: 40vw;
@@ -424,7 +311,6 @@
   border-radius: var(--dl-radius-radius-radius4);
   justify-content: center;
 }
-
 .register-by-gg-form {
   gap: var(--dl-space-space-oneandhalfunits);
   width: 70vw;
@@ -435,16 +321,14 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-
 .register-by-gg-text {
   font-size: 2.5em;
   align-self: center;
   text-align: center;
   font-family: "STIX Two Text";
   margin-bottom: var(--dl-space-space-twounits);
-  ;
+  text-decoration: underline;
 }
-
 .register-by-gg-form1 {
   gap: var(--dl-space-space-unit);
   width: 100%;
@@ -452,7 +336,6 @@
   display: flex;
   flex-direction: column;
 }
-
 .register-by-gg-full-name {
   gap: var(--dl-space-space-halfunit);
   width: 100%;
@@ -461,13 +344,11 @@
   flex-shrink: 0;
   flex-direction: column;
 }
-
 .register-by-gg-textinput {
   width: 100%;
   border-color: var(--dl-color-theme-primary1);
   background-color: transparent;
 }
-
 .register-by-gg-email {
   gap: var(--dl-space-space-halfunit);
   width: 100%;
@@ -476,13 +357,11 @@
   flex-shrink: 0;
   flex-direction: column;
 }
-
 .register-by-gg-textinput1 {
   width: 100%;
   border-color: var(--dl-color-theme-primary1);
   background-color: transparent;
 }
-
 .register-by-gg-phone {
   gap: var(--dl-space-space-halfunit);
   width: 100%;
@@ -491,13 +370,11 @@
   flex-shrink: 0;
   flex-direction: column;
 }
-
 .register-by-gg-textinput2 {
   width: 100%;
   border-color: var(--dl-color-theme-primary1);
   background-color: transparent;
 }
-
 .register-by-gg-address {
   gap: var(--dl-space-space-halfunit);
   width: 100%;
@@ -506,13 +383,11 @@
   flex-shrink: 0;
   flex-direction: column;
 }
-
 .register-by-gg-textinput3 {
   width: 100%;
   border-color: var(--dl-color-theme-primary1);
   background-color: transparent;
 }
-
 .register-by-gg-date-of-birth {
   gap: var(--dl-space-space-halfunit);
   width: 100%;
@@ -521,46 +396,47 @@
   flex-shrink: 0;
   flex-direction: column;
 }
-
 .register-by-gg-textinput4 {
   width: 100%;
   border-color: var(--dl-color-theme-primary1);
   background-color: transparent;
 }
-
 .register-by-gg-button {
   width: 100%;
   align-self: center;
   margin-top: var(--dl-space-space-oneandhalfunits);
   text-decoration: none;
 }
-
 .register-by-gg-text16 {
   text-align: center;
 }
-
 .register-by-gg-text17 {
-  font-size: 0.8rem;
+  font-size: 1 rem;
   align-self: center;
 }
 
+@media(max-width: 1600px) {
+  .register-by-gg-text {
+    font-size: 2.5em;
+    font-family: STIX Two Text;
+    text-decoration: underline;
+  }
+}
 @media(max-width: 991px) {
   .register-by-gg-form-root {
     width: 100%;
   }
 }
-
 @media(max-width: 479px) {
   .register-by-gg-form-root {
     padding: 0px;
   }
-
   .register-by-gg-button {
     width: 100%;
   }
 }
 
-.register-usser-google-container {
+.auth-register-google-container {
   width: 100%;
   display: flex;
   min-height: 100vh;
@@ -568,16 +444,14 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-
-.register-usser-google-header {
+.auth-register-google-header {
   width: 100%;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   justify-content: flex-start;
 }
-
-.register-usser-google-body {
+.auth-register-google-body {
   width: 100%;
   height: 110vh;
   display: flex;
