--- a/server/tomcat/web/css/style.css
+++ b/server/tomcat/web/css/style.css
@@ -31,7 +31,6 @@
   --dl-radius-radius-buttonradius: 24px;
   --dl-space-space-oneandhalfunits: 24px;
 }
-
 .button {
   color: var(--dl-color-theme-neutral-dark);
   cursor: pointer;
@@ -42,7 +41,6 @@
   border-radius: 4px;
   background-color: var(--dl-color-theme-neutral-light);
 }
-
 .input {
   color: var(--dl-color-theme-neutral-dark);
   cursor: auto;
@@ -52,7 +50,6 @@
   border-radius: 4px;
   background-color: var(--dl-color-theme-neutral-light);
 }
-
 .textarea {
   color: var(--dl-color-theme-neutral-dark);
   cursor: auto;
@@ -62,7 +59,6 @@
   border-radius: 4px;
   background-color: var(--dl-color-theme-neutral-light);
 }
-
 .list {
   width: 100%;
   margin: 1em 0px 1em 0px;
@@ -71,16 +67,12 @@
   list-style-type: none;
   list-style-position: outside;
 }
-
 .list-item {
   display: list-item;
 }
-
 .teleport-show {
   display: flex !important;
-  transform: translateX(0%) !important;
 }
-
 .thq-input {
   color: var(--dl-color-theme-neutral-dark);
   cursor: auto;
@@ -93,11 +85,9 @@
   border-radius: var(--dl-radius-radius-inputradius);
   background-color: var(--dl-color-theme-neutral-light);
 }
-
 .thq-input:focus {
   outline: 1px solid var(--dl-color-theme-primary1);
 }
-
 .thq-button-filled {
   gap: var(--dl-space-space-halfunit);
   fill: var(--dl-color-theme-secondary1);
@@ -118,14 +108,12 @@
   justify-content: center;
   background-color: var(--dl-color-theme-primary1);
 }
-
 .thq-button-filled:hover {
   fill: var(--dl-color-theme-secondary2);
   color: var(--dl-color-theme-secondary2);
   border-color: var(--dl-color-theme-primary2);
   background-color: var(--dl-color-theme-primary2);
 }
-
 .thq-button-outline {
   gap: var(--dl-space-space-halfunit);
   fill: var(--dl-color-theme-primary1);
@@ -145,14 +133,12 @@
   padding-bottom: var(--dl-space-space-halfunit);
   justify-content: center;
 }
-
 .thq-button-outline:hover {
   fill: var(--dl-color-theme-secondary2);
   color: var(--dl-color-theme-secondary2);
   border-color: var(--dl-color-theme-primary2);
   background-color: var(--dl-color-theme-primary2);
 }
-
 .thq-button-flat {
   gap: var(--dl-space-space-halfunit);
   fill: var(--dl-color-theme-primary1);
@@ -172,54 +158,46 @@
   padding-bottom: var(--dl-space-space-halfunit);
   justify-content: center;
 }
-
 .thq-button-flat:hover {
   fill: var(--dl-color-theme-secondary1);
   color: var(--dl-color-theme-secondary1);
   border-color: var(--dl-color-theme-primary2);
   background-color: var(--dl-color-theme-primary2);
 }
-
 .thq-heading-1 {
   font-size: 48px;
   font-family: STIX Two Text;
   font-weight: 700;
   line-height: 1.5;
 }
-
 .thq-heading-2 {
   font-size: 35px;
   font-family: STIX Two Text;
   font-weight: 600;
   line-height: 1.5;
 }
-
 .thq-heading-3 {
   font-size: 26px;
   font-family: STIX Two Text;
   font-weight: 600;
   line-height: 1.5;
 }
-
 .thq-body-large {
   font-size: 18px;
   font-family: Noto Sans;
   line-height: 1.5;
 }
-
 .thq-body-small {
   font-size: 1rem;
   font-family: Noto Sans;
   line-height: 1.5;
 }
-
 .thq-team-image-round {
   width: 80px;
   height: 80px;
   object-fit: cover;
   border-radius: 50%;
 }
-
 .thq-section-padding {
   width: 100%;
   display: flex;
@@ -228,45 +206,38 @@
   align-items: center;
   flex-direction: column;
 }
-
 .thq-section-max-width {
   width: 100%;
   max-width: var(--dl-size-size-maxwidth);
 }
-
 .thq-img-ratio-1-1 {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 1/1;
   border-radius: var(--dl-radius-radius-imageradius);
 }
-
 .thq-img-ratio-16-9 {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 16/9;
   border-radius: var(--dl-radius-radius-imageradius);
 }
-
 .thq-img-ratio-4-3 {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 4/3;
   border-radius: var(--dl-radius-radius-imageradius);
 }
-
 .thq-img-ratio-4-6 {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 4/6;
   border-radius: var(--dl-radius-radius-imageradius);
 }
-
 .thq-img-round {
   width: 100%;
   border-radius: var(--dl-radius-radius-round);
 }
-
 .thq-flex-column {
   gap: var(--dl-space-space-twounits);
   display: flex;
@@ -275,7 +246,6 @@
   align-items: center;
   flex-direction: column;
 }
-
 .thq-flex-row {
   gap: var(--dl-space-space-twounits);
   display: flex;
@@ -283,19 +253,16 @@
   position: relative;
   align-items: center;
 }
-
 .thq-grid-6 {
   display: grid;
   grid-gap: var(--dl-space-space-twounits);
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
-
 .thq-grid-5 {
   display: grid;
   grid-gap: var(--dl-space-space-twounits);
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
-
 .thq-card {
   gap: var(--dl-space-space-oneandhalfunits);
   display: flex;
@@ -304,35 +271,29 @@
   border-radius: var(--dl-radius-radius-cardradius);
   flex-direction: column;
 }
-
 .thq-box-shadow {
   box-shadow: 0px 0px 5px -2px var(--dl-color-theme-neutral-dark);
 }
-
 .thq-grid-3 {
   display: grid;
   grid-gap: var(--dl-space-space-twounits);
   grid-template-columns: 1fr 1fr 1fr;
 }
-
 .thq-grid-4 {
   display: grid;
   grid-gap: var(--dl-space-space-twounits);
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-
 .thq-grid-2 {
   width: 100%;
   display: grid;
   grid-gap: var(--dl-space-space-twounits);
   grid-template-columns: 1fr 1fr;
 }
-
 .thq-checkbox {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-
 .thq-select {
   cursor: pointer;
   appearance: none;
@@ -346,39 +307,32 @@
   background-repeat: no-repeat;
   background-position: right 8px center;
 }
-
 .thq-divider-horizontal {
   width: 100%;
   height: 1px;
   background-color: var(--dl-color-theme-neutral-dark);
 }
-
 .thq-icon-small {
   width: 24px;
   height: 24px;
 }
-
 .thq-button-icon {
   fill: var(--dl-color-theme-primary2);
   padding: 3px;
   transition: 0.3s;
   border-radius: var(--dl-radius-radius-cardradius);
 }
-
 .thq-button-icon:hover {
   fill: var(--dl-color-theme-secondary2);
 }
-
 .thq-icon-medium {
   width: var(--dl-size-size-medium);
   height: var(--dl-size-size-medium);
 }
-
 .thq-icon-x-small {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-
 .thq-link {
   cursor: pointer;
   display: inline-block;
@@ -391,20 +345,18 @@
   font-weight: 600;
   background-clip: text;
   background-size: 200% 100%;
+  text-decoration: underline;
   background-position: 100%;
   -webkit-text-fill-color: transparent;
 }
-
 .thq-link:hover {
   background-position: 0 100%;
 }
-
 .thq-grid-auto-300 {
   display: grid;
   grid-gap: var(--dl-space-space-oneandhalfunits);
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
-
 .thq-animated-group-vertical-reverse {
   gap: var(--dl-space-space-unit);
   width: 100%;
@@ -415,7 +367,6 @@
   justify-content: space-around;
   animation-direction: reverse;
 }
-
 .thq-animated-group-horizontal-reverse {
   gap: var(--dl-space-space-unit);
   display: flex;
@@ -426,7 +377,6 @@
   justify-content: space-around;
   animation-direction: reverse;
 }
-
 .thq-animated-group-vertical {
   gap: var(--dl-space-space-unit);
   width: 100%;
@@ -436,7 +386,6 @@
   flex-direction: column;
   justify-content: space-around;
 }
-
 .thq-animated-group-horizontal {
   gap: var(--dl-space-space-unit);
   display: flex;
@@ -446,36 +395,29 @@
   flex-shrink: 0;
   justify-content: space-around;
 }
-
 .thq-animated-group-container-vertical {
   gap: var(--dl-space-space-unit);
   display: flex;
   overflow: hidden;
   flex-direction: column;
 }
-
 .thq-animated-group-container-horizontal {
   gap: var(--dl-space-space-unit);
   display: flex;
   overflow: hidden;
 }
-
 .thq-mask-image-vertical {
   mask-image: linear-gradient(to bottom, transparent, black 1%, black 99%, transparent);
 }
-
 .thq-mask-image-horizontal {
   mask-image: linear-gradient(to right, transparent, black 1%, black 99%, transparent);
 }
-
 .thq-img-scale {
   transition: 0.3s;
 }
-
 .thq-img-scale:hover {
   scale: 1.05;
 }
-
 .thq-animated-card-bg-1 {
   width: 100%;
   height: 100%;
@@ -483,13 +425,11 @@
   border-radius: var(--dl-radius-radius-cardradius);
   background-color: var(--dl-color-theme-accent1);
 }
-
 .thq-animated-card-bg-2 {
   transition: transform 0.3s;
   border-radius: var(--dl-radius-radius-cardradius);
   background-color: var(--dl-color-theme-accent2);
 }
-
 .thq-button-animated {
   outline: none;
   z-index: 1;
@@ -497,28 +437,22 @@
   position: relative;
   border-width: 2px;
 }
-
 .thq-input::placeholder {
   text-align: center;
   vertical-align: middle;
 }
-
 .thq-animated-group-container-vertical:hover div {
   animation-play-state: paused;
 }
-
 .thq-animated-group-container-horizontal:hover div {
   animation-play-state: paused;
 }
-
 .thq-animated-card-bg-2:has([data-animated="true"]:hover) {
   transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(3deg) skew(0deg, 0deg);
 }
-
 .thq-animated-card-bg-1:has([data-animated="true"]:hover) {
   transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(-6deg) skew(0deg, 0deg);
 }
-
 .thq-button-animated:before {
   top: 0;
   left: -20%;
@@ -535,17 +469,14 @@
   transform-origin: 0 0;
   transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
 }
-
 .thq-button-animated:hover::before {
   color: var(--dl-color-theme-neutral-light);
   z-index: -1;
   transform: scaleX(1);
 }
-
 .thq-bod {
   color: #f9f3f3;
 }
-
 .thq-link1 {
   cursor: pointer;
   display: inline-block;
@@ -559,6 +490,9 @@
   -webkit-text-fill-color: var(--dl-color-theme-accent1);
 }
 
+
+
+
 .Welcome {
   font-size: 2em;
   font-family: Inter;
@@ -567,7 +501,6 @@
   text-transform: none;
   text-decoration: none;
 }
-
 .text2 {
   font-size: 25px;
   font-family: Merriweather;
@@ -576,7 +509,6 @@
   text-transform: none;
   text-decoration: none;
 }
-
 .heading1 {
   font-size: 16px;
   font-family: Inter;
@@ -585,7 +517,6 @@
   text-transform: none;
   text-decoration: none;
 }
-
 .text1 {
   font-size: 16px;
   font-style: normal;
@@ -595,7 +526,6 @@
   text-transform: none;
   text-decoration: none;
 }
-
 .heading {
   font-size: 16px;
   font-family: Inter;
@@ -604,7 +534,6 @@
   text-transform: none;
   text-decoration: none;
 }
-
 .shownow {
   font-size: 16px;
   font-family: Inter;
@@ -613,7 +542,6 @@
   text-transform: none;
   text-decoration: none;
 }
-
 .Content {
   font-size: 16px;
   font-family: Inter;
@@ -628,95 +556,76 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
-
 @media(max-width: 767px) {
   .thq-section-padding {
     padding: var(--dl-space-space-threeunits);
   }
-
   .thq-flex-column {
     gap: var(--dl-space-space-oneandhalfunits);
   }
-
   .thq-flex-row {
     gap: var(--dl-space-space-oneandhalfunits);
   }
-
   .thq-grid-6 {
     grid-gap: var(--dl-space-space-oneandhalfunits);
     grid-template-columns: 1fr 1fr 1fr;
   }
-
   .thq-grid-5 {
     grid-gap: var(--dl-space-space-oneandhalfunits);
     grid-template-columns: 1fr 1fr 1fr;
   }
-
   .thq-card {
     padding: var(--dl-space-space-oneandhalfunits);
   }
-
   .thq-grid-3 {
     grid-gap: var(--dl-space-space-oneandhalfunits);
     grid-template-columns: 1fr 1fr;
   }
-
   .thq-grid-4 {
     grid-gap: var(--dl-space-space-oneandhalfunits);
     flex-direction: row;
     grid-template-columns: 1fr 1fr;
   }
-
   .thq-grid-2 {
     grid-gap: var(--dl-space-space-oneandhalfunits);
     grid-template-columns: 1fr;
   }
-
   .thq-img-scale {
     width: 100%;
   }
 }
-
 @media(max-width: 479px) {
   .thq-section-padding {
     padding: var(--dl-space-space-oneandhalfunits);
   }
-
   .thq-flex-column {
     gap: var(--dl-space-space-unit);
   }
-
   .thq-flex-row {
     gap: var(--dl-space-space-unit);
   }
-
   .thq-grid-6 {
     grid-gap: var(--dl-space-space-unit);
     grid-template-columns: 1fr 1fr;
   }
-
   .thq-grid-5 {
     grid-gap: var(--dl-space-space-unit);
     grid-template-columns: 1fr 1fr;
   }
-
   .thq-grid-3 {
     grid-gap: var(--dl-space-space-unit);
     align-items: center;
     grid-template-columns: 1fr;
   }
-
   .thq-grid-4 {
     grid-gap: var(--dl-space-space-unit);
     align-items: center;
     flex-direction: column;
     grid-template-columns: 1fr;
   }
-
   .thq-grid-2 {
     grid-gap: var(--dl-space-space-unit);
   }
-
   .thq-grid-auto-300 {
     grid-template-columns: 1fr;
   }
