--- a/server/tomcat/web/css/auth-login.css
+++ b/server/tomcat/web/css/auth-login.css
@@ -8,7 +8,7 @@
 }
 .navlogout-container1 {
   width: 100%;
-  border: 2px dashed rgba(120, 120, 120, 0.4);
+  border: ;
   height: 11vh;
   display: flex;
   opacity: 1;
