--- a/server/tomcat/web/css/cart.css
+++ b/server/tomcat/web/css/cart.css
@@ -1877,7 +1877,7 @@
 .view-cart-component-container47 {
   flex: 0 0 auto;
   width: auto;
-  border: 2px dashed rgba(120, 120, 120, 0.4);
+  border: ;
   height: auto;
   display: flex;
   align-items: flex-start;
