--- a/server/tomcat/web/css/index.css
+++ b/server/tomcat/web/css/index.css
@@ -9,7 +9,7 @@
 
 .navbar-container1 {
   width: 100%;
-  border: 2px dashed rgba(120, 120, 120, 0.4);
+  border: ;
   height: 11vh;
   display: flex;
   opacity: 1;
@@ -270,7 +270,7 @@
 
 .navbar-buttons1 {
   gap: var(--dl-space-space-twounits);
-  border: 2px dashed rgba(120, 120, 120, 0.4);
+  border: ;
   display: flex;
   margin-top: var(--dl-space-space-twounits);
   align-items: center;
